Remove /order/check_price API endpoint
Remove the order price check endpoint at least until
the price calculations have been implemented using product
price lists.

Refs TTV-1
